[package]
name = "label-verifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "label-verifier"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
log = "0.4"
regex = "1"
strsim = "0.11"
image = "0.25"
bytes = "1"
